--- a/samconfig.toml
+++ b/samconfig.toml
@@ -18,7 +18,7 @@ lint = true
 
 [default.deploy.parameters]
 capabilities = "CAPABILITY_IAM"
-confirm_changeset = true
+confirm_changeset = false
 s3_prefix = "sam-app"
 region = "us-east-1"
 disable_rollback = true
